# deobfninja

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh  library.cpp  library.h
.github/workflows/: build.yaml  build_ci.yaml
include/: deobfuscator.hpp  plugin.h
include/methods/: deobfuscator.hpp  methods.hpp
include/methods/flows/: cffdetection.hpp  nativepredicatesolver.hpp
include/methods/instructions/: mbasimplifier.hpp
include/patterns/: searcher.h
include/utils/: ilprinter.hpp
modules/: module.cpp  module.h  modulemanager.cpp  modulemanager.h
notebooks/: ILPoC.ipynb
patterns/examples/: mlil_add.hpp
recipes/parser/: ilparser.cpp  ilparser.h  llilparser.cpp  llilparser.h  mlilparser.cpp  mlilparser.h
resources/: mba-dataset-2-5-20250710.csv  mba-dataset-test.csv  mba-dataset.csv
scripts/: generate_mba.py
scripts/benchmarks/: Makefile
scripts/mba_generator/: Makefile  generate_mba.py  requirements.txt
src/: deobfuscator.cpp  plugin.cpp  utils.cpp
src/methods/: deobfuscator.cpp  methods.cpp
src/methods/flows/: cffdetection.cpp  nativepredicatesolver.cpp
src/methods/instructions/: mbasimplifier.cpp
src/patterns/: searcher.cpp
src/patterns/examples/: llil_add.hpp
src/utils/: ilprinter.cpp
tests/: deobfuscator_test.cpp  plugin_test.cpp
tests/methods/: methods_test.cpp
tests/methods/instructions/: mbasimplifier_test.cpp
